# git_frela

./: .gitignore  README.md  br304.Asm  main.cpp
Calc/: CMakeLists.txt  main.cpp
Calc/includes/: TCalc.h
Calc/lib/: .cpp  CMakeLists.txt  TCalc.cpp  TCalc.h  TEngCalc.cpp  TEngCalc.h
Calc/lib/Calc/: CMakeLists.txt  TCalc.cpp  TCalc.h
Calc/lib/EngCalc/: CMakeLists.txt  TEngCalac.cpp  TEngCalac.h
Calc/src/: TCalc.cpp
testCatch/: CMakeLists.txt  test.cpp  testEng.cpp
unitest/: CMakeLists.txt  ITest.h  TCalcTest.cpp  TCalcTest.h  TEngCalcTest.cpp  TEngCalcTest.h  main.cpp
unitest/lib/: ITest.h  TCalcTest.cpp  TEngCalcTest.cpp  TEngCalcTest.h
